# candle-rag

./: .gitignore  Cargo.toml  README.md  biome.json
crates/zxrag/: Cargo.toml
crates/zxrag-backend/: Cargo.toml
crates/zxrag-backend/migrations/sqlite/: zxrag.sql
crates/zxrag-backend/src/: conf.rs  error.rs  lib.rs  trace.rs  tracing.rs
crates/zxrag-backend/src/controller/: knowledge_base_controller.rs  mod.rs  openai_controller.rs
crates/zxrag-backend/src/types/: openai.rs
crates/zxrag-core/: Cargo.toml  build.rs
crates/zxrag-core/src/: completion_stream.rs  conf.rs  lib.rs  llama_cpp.rs  model.rs  quantized.rs  stopping_stream.rs  util.rs
crates/zxrag-core/src/models/: bert.rs  gemma.rs  llama_cpp.rs  llama_cpp_new.rs  mod.rs  phi.rs
crates/zxrag-core/src/types/: conf.rs  embedding.rs  handle.rs  knowledge_base.rs  lancedb.rs  llm.rs  mod.rs  model.rs  openai.rs  sqlx.rs  stopping_stream.rs  token_output_stream.rs
crates/zxrag/src/: main.rs
zxrag-ui/: biome.json  bun.lockb  components.json  index.html  package.json  tailwind.config.ts  vite.config.ts
zxrag-ui/src/: App.css  App.tsx  i18n.ts  main.tsx  openai.ts  schema.ts
zxrag-ui/src/components/: knowledgebase-selector.tsx  language-toggle.tsx  logo.tsx  main-nav.tsx  maxlength-selector.tsx  navbar.tsx  temperature-selector.tsx  top-p-selector.tsx
zxrag-ui/src/components/knowledgebase-files-page/: data-table-columns.tsx  data-table-row-actions.tsx  data-table-toolbar.tsx  data-table.tsx
zxrag-ui/src/components/knowledgebase-settings-page/: file-table.tsx  vector-table.tsx
zxrag-ui/src/locales/: en.json
zxrag-ui/src/pages/: ChatPage.tsx  chat-page.tsx  knowledgebase-chat-page.tsx  knowledgebase-embeddings-page.tsx  knowledgebase-files-page.tsx  knowledgebase-page.tsx  knowledgebase-settings-page.tsx  layout-page.tsx  ocr-page.tsx
