[workspace]
resolver = "2"
members = ["crates/zxrag", "crates/zxrag-backend", "crates/zxrag-core"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
zxrag = { path = "./crates/zxrag", version = "0.1.0" }
zxrag-backend = { path = "./crates/zxrag-backend", version = "0.1.0" }
zxrag-core = { path = "./crates/zxrag-core", version = "0.1.0" }
anyhow = "1.0.80"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.1" }
candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.4.1" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.4.1" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.4.1" }
clap = { version = "4.5.1", features = ["derive"] }
tokenizers = { version = "0.15.2", default-features = false }
hf-hub = "0.3.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
config = "0.14.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "time",
  "std",
  "fmt",
  "local-time",
] }
tracing-appender = "0.2.3"
tracing-chrome = "0.7.1"
time = { version = "0.3.34", features = ["local-offset"] }
