[workspace]
resolver = "2"
members = ["crates/zxrag", "crates/zxrag-backend", "crates/zxrag-core"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
zxrag = { path = "./crates/zxrag", version = "0.1.0" }
zxrag-backend = { path = "./crates/zxrag-backend", version = "0.1.0" }
zxrag-core = { path = "./crates/zxrag-core", version = "0.1.0" }
anyhow = "1.0.82"
candle-core = { git = "https://github.com/huggingface/candle.git", branch = "main" }
candle-examples = { git = "https://github.com/huggingface/candle.git", branch = "main" }
candle-nn = { git = "https://github.com/huggingface/candle.git", branch = "main" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", branch = "main" }
clap = { version = "4.5.4", features = ["derive"] }
tokenizers = { version = "0.15.2", default-features = false }
hf-hub = "0.3.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
config = "0.14.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "time",
  "std",
  "fmt",
  "local-time",
] }
tracing-appender = "0.2.3"
tracing-chrome = "0.7.2"
time = { version = "0.3.36", features = ["local-offset"] }
strum = { version = "0.26.2", features = ["derive"] }
axum = { version = "0.7.5", features = ["tracing", "multipart"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
rust-embed = { version = "8.3.0", features = ["compression"] }
tower-http = { version = "0.5.2", features = [
  "fs",
  "limit",
  "trace",
  "auth",
  "catch-panic",
  "cors",
] }
mime_guess = "2.0.4"
hex = "0.4.3"
either = { version = "1.11.0", features = ["serde"] }
derive_more = "0.99.17"
futures = "0.3.30"
uuid = { version = "1.8.0", features = ["v7"] }
tinyvec = { version = "1.6.0", features = ["serde"] }
pin-project = "1.1.5"
bindgen_cuda = "0.1.5"
vectordb = "0.4.10"
dyn-clone = "1.0.17"
arrow-schema = "50.0.0"
arrow-array = "50.0.0"
opendal = "0.45.1"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
serde_with = { version = "3.7.0", features = ["chrono_0_4"] }
