[package]
name = "zxrag-backend"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zxrag-core = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
time = { workspace = true }
