[package]
name = "zxrag-backend"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zxrag-core = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
time = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
axum = { workspace = true }
rust-embed = { workspace = true }
tower-http = { workspace = true }
mime_guess = { workspace = true }
hex = { workspace = true }
either = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
tinyvec = { workspace = true }
vectordb = { workspace = true }
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
redb = { workspace = true }
opendal = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
