[package]
name = "zxrag-core"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
config = { workspace = true }
anyhow = { workspace = true }
strum = { workspace = true }
candle-core = { workspace = true }
candle-transformers = { workspace = true }
candle-examples = { workspace = true }
tokenizers = { workspace = true }
tracing = { workspace = true }
