[package]
name = "zxrag-core"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
config = { workspace = true }
anyhow = { workspace = true }
strum = { workspace = true }
candle-core = { workspace = true }
candle-transformers = { workspace = true }
candle-examples = { workspace = true }
candle-nn = { workspace = true }
tokenizers = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
dyn-clone = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
sqlx = { workspace = true }
either = { workspace = true }
derive_more = { workspace = true }
tinyvec = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
bindgen_cuda = { workspace = true, optional = true }

[features]
default = []
cuda = [
  "candle-core/cuda",
  "candle-nn/cuda",
  "candle-transformers/cuda",
  "dep:bindgen_cuda",
]
