[package]
name = "zxrag"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zxrag-core = { workspace = true }
zxrag-backend = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
dyn-clone = { workspace = true }
vectordb = { workspace = true }
tokio = { workspace = true }
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
futures = { workspace = true }

[features]
default = []
cuda = ["zxrag-core/cuda"]
